@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2010-2025 Contributors to the openHAB project
+ * Copyright (c) 2010-2026 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
  * information.
@@ -14,7 +14,6 @@ package org.openhab.binding.hue.internal.api.dto.clip2;
 
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.eclipse.jdt.annotation.NonNullByDefault;
 
@@ -29,7 +28,7 @@ public class Resources {
     private List<Resource> data = new ArrayList<>();
 
     public List<String> getErrors() {
-        return errors.stream().map(Error::getDescription).collect(Collectors.toList());
+        return errors.stream().map(Error::getDescription).toList();
     }
 
     public boolean hasErrors() {
